--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@tailwindcss/vite": "^4.1.6",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
+    "framer-motion": "^12.11.1",
+    "lucide-react": "^0.510.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "tailwind-scrollbar-hide": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
